--- a/index.css
+++ b/index.css
@@ -11,7 +11,12 @@ body {
 #root {
   font-family: Palatino, Georgia, serif;
   max-width: 1024px;
-  margin: 20px auto;
+  margin: 40px auto;
+}
+@media (max-width: 1024px) {
+  #root {
+    width: 80%;
+  }
 }
 .name {
   font-size: 2em;
@@ -35,11 +40,14 @@ body {
   margin-bottom: 8px;
 }
 .inst,
-.dept,
 .title,
 .contest,
 .award {
   display: inline-block;
+  margin-right: 10px;
+}
+.title {
+  font-style: italic;
 }
 .inst,
 .proj,
@@ -58,4 +66,16 @@ body {
   -webkit-transform: scale(0.9);
   -o-transform: scale(0.9);
   transform: scale(0.9);
+}
+.section:before {
+  content: " ";
+  display: block;
+  width: 90%;
+  margin: auto;
+  border-top: 1px solid #eee;
+  padding-top: 15px;
+  margin-top: 10px;
+}
+.summary {
+  margin-bottom: 20px;
 }
