--- a/index.jade
+++ b/index.jade
@@ -22,8 +22,8 @@ html(lang="en")
       .phone +886-911015216 / 0911015216 (Taiwan)
       .summary
         | Cofounder of foundi.info, g0v.tw and infographics.tw, expert in web technology and data visualization domain. Invited lecturer for media and communication related domains by many universities including NTU, NCTU, NCCU, NCU. Amatuer photographer specialized in nature, wedding and mountaineering.
-      hr
-      .row
+      //hr
+      .row.section
         .col-sm-3.table-head EDUCATION
         .col-sm-8
           .item
@@ -31,50 +31,50 @@ html(lang="en")
             .inst National Taiwan University
             .dept Dept. of Computer Science and Information Engineering
             .title Master Degree
-      .row
+      .row.section
         .col-sm-3.table-head WORK EXPERIENCE
         .col-sm-8
           .item
             .date 2013 ~ now
             .inst Foundi.info
             .title Co-founder
-            .desc Busincess Development, Marketing, Web Frontend Developing
+            .desc Busincess development, marketing, web frontend engineering
           .item
             .date 2014
             .inst Google Taiwan Digicamp
             .title Technical Consultant
-            .desc Consultant for web technology ( mainly html5 ) and web-based marketing campaign
+            .desc Consultant focused on web-baed technology and marketing campaign
           .item
             .date 2012 ~ now
             .inst g0v.tw
             .title Co-founder
-            .desc Participant, Photographer, Contributor, Missionary
+            .desc Open Government Community in Taiwan. Contributor and missionary.
           .item
             .date 2008 ~ 2013
             .inst Mediatek inc.
             .title Senior Software Engineer
-            .desc Linux kernel driver, building system development
+            .desc Linux kernel, system automation / optimization and building system
 
-      .row
+      .row.section
         .col-sm-3.table-head SKILLS
         .col-sm-8
           .item
             .date 1998 ~ now
             .tech Web Related Technology
-            .desc HTML5, CSS, JavaScript, SVG, D3.js, Node.js, Django
+            .desc HTML5, JavaScript, Node.js, Django
           .item
             .date 2012 ~ now
             .tech Data Visualization
-            .desc Visualization Methodology, Data Crawling and Analysis Skills
+            .desc Data crawling and analysis, interactive visualization in D3.js
           .item
-            .date 2008 ~ 2013
-            .tech Linux Kernel Driver
-            .desc Experience of Touch Panel Driver, I2C, AUXADC
-          .item
-            .date 2009 ~ 2013
+            .date 2010 ~ 2013
             .tech Android Open Platform
-            .desc Dalvik Virtual Machine, Android Framework, Binder, Debug Toolkit, Building System
-      .row
+            .desc Experience in Dalvik Virtual Machine, Android Framework, Building System
+          .item
+            .date 2008 ~ 2012
+            .tech Linux Kernel Driver Development
+            .desc Experience with Touch Panel Driver, I2C, AUXADC
+      .row.section
         .col-sm-3.table-head PORTFOLIO
         .col-sm-8
           .item
@@ -82,72 +82,54 @@ html(lang="en")
             .proj 
               | infographics.tw
               i.glyphicon.glyphicon-globe
-            .desc Dedicated to provide Data Visualization resources
+            .desc Data visualization resources in Mandarin community
           .item
             .date 2014 ~ now
             .proj 
               | loading.io
               i.glyphicon.glyphicon-globe
-            .desc Online toolbox for Web Designer
-          .item
-            .date 2014
-            .proj 
-              | 67kjobs.info
-              i.glyphicon.glyphicon-globe
-            .desc Dedicated to provide information of jobs with higher salary
+            .desc Web designer toolbox
           .item
             .date 2013 ~ now
             .proj 
               | foundi.info
               i.glyphicon.glyphicon-globe
-            .desc Real Estate information Provider
+            .desc Real estate information platform
           .item
             .date 2013 ~ now
             .proj 
               | zbryikt.github.io/visualize/
               i.glyphicon.glyphicon-globe
-            .desc selected works of visualization projects
+            .desc Selected works of visualization projects
           .item
             .date 2011 ~ now
             .proj 
               | wallpaper.tkirby.org
               i.glyphicon.glyphicon-globe
             .desc selected works of photography projects
-          .item
-            .date 2010 ~ now
-            .proj 
-              | flickr.com/tkirby
-              i.glyphicon.glyphicon-globe
-            .desc photography porfolio
-          .item
-            .date 2004 ~ 2006
-            .proj
-              | www.csie.ntu.edu.tw/~b88039/slide/
-              i.glyphicon.glyphicon-globe
-            .desc TKSlide the Online sliding system
-      .row
+      .row.section
         .col-sm-3.table-head AWARD
         .col-sm-8
           .item
             .date 2014
-            .contest National Taiwan University Journalism Award
-            .award Quality Award
-            .desc Contest Project: Taiwan Democracy Activity Record Longform Report
+            .contest NTU Public News Contest
+            .award First Prize / Multimedia News Category
+            .desc Historical Review of Taiwan Democracy Activity and Yi-hsiung Lin
           .item
             .date 2014
             .contest Open Data Contest
-            .award Quality Award
-            .desc Contest Project: Environment Map for Real Estate
+            .award Grand Prize
+            .desc Foundi - the Environment Map for Real Estate Industry
 
           .item
             .date 2013
             .contest Yahoo Hack Day 2013
             .award Honorable Mention
-            .desc Contest Project: Cinema of Legislative Yuan
+            .desc Legislative Yuan Cinema - Interactive Live Streaming of Congress sessions
 
           .item
             .date 2012
             .contest Yahoo Hack Day 2012
             .award Honorable Mention
-            .desc Contest Project: Taiwan Government Budget Visualization
+            .desc Open Budget - Open + Visualization of Taiwan Government Budget
 
