--- a/index.jade
+++ b/index.jade
@@ -9,7 +9,7 @@ html(lang="en")
   head(prefix="og: http://ogp.me/ns#")
     meta(charset="utf-8")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title template
+    title Curriculum Vitae - kirby
     // libraries
     include library.jade
     // custom files
@@ -21,8 +21,10 @@ html(lang="en")
       .email tkirby@gmail.com
       .phone +886-911015216 / 0911015216 (Taiwan)
       .summary
-        | Cofounder of foundi.info, g0v.tw and infographics.tw, expert in web technology and data visualization domain. Invited lecturer for media and communication related domains by many universities including NTU, NCTU, NCCU, NCU. Amatuer photographer specialized in nature, wedding and mountaineering.
-      //hr
+        | Cofounder of foundi.info, g0v.tw and infographics.tw.
+        | Expert in web technology and data visualization.
+        | Invited lecturer of media and communication domains in universities including NTU, SHU, NCTU, NCCU, etc.
+        | Also a professional photographer specialized in wedding and mountain photography.
       .row.section
         .col-sm-3.table-head EDUCATION
         .col-sm-8
@@ -48,7 +50,7 @@ html(lang="en")
             .date 2012 ~ now
             .inst g0v.tw
             .title Co-founder
-            .desc Open Government Community in Taiwan. Contributor and missionary.
+            .desc Taiwan open government community. Contributor and missionary
           .item
             .date 2008 ~ 2013
             .inst Mediatek inc.
@@ -56,7 +58,7 @@ html(lang="en")
             .desc Linux kernel, system automation / optimization and building system
 
       .row.section
-        .col-sm-3.table-head SKILLS
+        .col-sm-3.table-head SKILL
         .col-sm-8
           .item
             .date 1998 ~ now
@@ -69,7 +71,7 @@ html(lang="en")
           .item
             .date 2010 ~ 2013
             .tech Android Open Platform
-            .desc Experience in Dalvik Virtual Machine, Android Framework, Building System
+            .desc Experience in DVM, Android Framework, Building System
           .item
             .date 2008 ~ 2012
             .tech Linux Kernel Driver Development
@@ -77,36 +79,36 @@ html(lang="en")
       .row.section
         .col-sm-3.table-head PORTFOLIO
         .col-sm-8
-          .item
+          .item.no-print
             .date 2015 ~ now
             .proj 
-              | infographics.tw
+              a(href="http://blog.infographics.tw") infographics.tw
               i.glyphicon.glyphicon-globe
             .desc Data visualization resources in Mandarin community
           .item
             .date 2014 ~ now
             .proj 
-              | loading.io
+              a(href="http://loading.io") loading.io
               i.glyphicon.glyphicon-globe
             .desc Web designer toolbox
-          .item
+          .item.no-print
             .date 2013 ~ now
             .proj 
-              | foundi.info
+              a(href="http://foundi.info") foundi.info
               i.glyphicon.glyphicon-globe
             .desc Real estate information platform
           .item
             .date 2013 ~ now
             .proj 
-              | zbryikt.github.io/visualize/
+              a(href="http://zbryikt.github.io/visualize/") zbryikt.github.io/visualize/
               i.glyphicon.glyphicon-globe
             .desc Selected works of visualization projects
           .item
             .date 2011 ~ now
             .proj 
-              | wallpaper.tkirby.org
+              a(href="http://wallpaper.tkirby.org") wallpaper.tkirby.org
               i.glyphicon.glyphicon-globe
-            .desc selected works of photography projects
+            .desc Selected works of photography projects
       .row.section
         .col-sm-3.table-head AWARD
         .col-sm-8
@@ -114,7 +116,9 @@ html(lang="en")
             .date 2014
             .contest NTU Public News Contest
             .award First Prize / Multimedia News Category
-            .desc Historical Review of Taiwan Democracy Activity and Yi-hsiung Lin
+            .desc
+              a(href="http://0media.tw/yslin/") Historical Review of Taiwan Democracy Activity and Yi-hsiung Lin
+              i.glyphicon.glyphicon-globe.no-print
           .item
             .date 2014
             .contest Open Data Contest
@@ -125,11 +129,13 @@ html(lang="en")
             .date 2013
             .contest Yahoo Hack Day 2013
             .award Honorable Mention
-            .desc Legislative Yuan Cinema - Interactive Live Streaming of Congress sessions
+            .desc Legislative Yuan Cinema - Interactive streaming of congress sessions
 
           .item
             .date 2012
             .contest Yahoo Hack Day 2012
             .award Honorable Mention
-            .desc Open Budget - Open + Visualization of Taiwan Government Budget
+            .desc
+              a(href="http://budget.g0v.tw") Open Budget - Open + Visualization of Taiwan Government Budget
+              i.glyphicon.glyphicon-globe.no-print
 
