--- a/index.css
+++ b/index.css
@@ -36,8 +36,14 @@ body {
   font-weight: bold;
   text-align: right;
 }
+@media (max-width: 768px) {
+  .table-head {
+    margin-bottom: 10px;
+    text-decoration: underline;
+  }
+}
 .item {
-  margin-bottom: 8px;
+  margin-bottom: 11px;
 }
 .inst,
 .title,
@@ -46,7 +52,8 @@ body {
   display: inline-block;
   margin-right: 10px;
 }
-.title {
+.title,
+.award {
   font-style: italic;
 }
 .inst,
@@ -55,6 +62,9 @@ body {
 .contest {
   font-weight: bold;
   margin-right: 10px;
+}
+.desc {
+  opacity: 0.9;
 }
 .glyphicon {
   font-size: 14px;
@@ -77,5 +87,55 @@ body {
   margin-top: 10px;
 }
 .summary {
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
+  width: 95%;
+  text-align: justify;
+}
+a {
+  color: #333;
+}
+.hidden-xs-inline {
+  display: inline;
+}
+@media (max-width: 640px) {
+  .hidden-xs-inline {
+    display: none;
+  }
+}
+@media print {
+  .no-print {
+    display: none;
+  }
+  .col-sm-3,
+  .col-sm-8 {
+    float: left;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-8 {
+    width: 66.66666666666667%;
+  }
+  .table-head {
+    margin-bottom: auto;
+    text-decoration: none;
+  }
+  #root {
+    width: 95%;
+    margin: 25px auto 5px;
+  }
+  .item {
+    margin-bottom: 5px;
+  }
+  a[href]:after {
+    content: none !important;
+  }
+  .summary {
+    line-height: 15px;
+    margin-bottom: 15px;
+  }
+  .section:before {
+    padding-top: 10px;
+    margin-top: 7px;
+  }
 }
