open link in new window/tab

--- a/index.jade
+++ b/index.jade
@@ -82,31 +82,31 @@ html(lang="en")
           .item.no-print
             .date 2015 ~ now
             .proj 
-              a(href="http://blog.infographics.tw") infographics.tw
+              a(href="http://blog.infographics.tw",target="_blank") infographics.tw
               i.glyphicon.glyphicon-globe
             .desc Data visualization resources in Mandarin community
           .item
             .date 2014 ~ now
             .proj 
-              a(href="http://loading.io") loading.io
+              a(href="http://loading.io",target="_blank") loading.io
               i.glyphicon.glyphicon-globe
             .desc Web designer toolbox
           .item.no-print
             .date 2013 ~ now
             .proj 
-              a(href="http://foundi.info") foundi.info
+              a(href="http://foundi.info",target="_blank") foundi.info
               i.glyphicon.glyphicon-globe
             .desc Real estate information platform
           .item
             .date 2013 ~ now
             .proj 
-              a(href="http://zbryikt.github.io/visualize/") zbryikt.github.io/visualize/
+              a(href="http://zbryikt.github.io/visualize/",target="_blank") zbryikt.github.io/visualize/
               i.glyphicon.glyphicon-globe
             .desc Selected works of visualization projects
           .item
             .date 2011 ~ now
             .proj 
-              a(href="http://wallpaper.tkirby.org") wallpaper.tkirby.org
+              a(href="http://wallpaper.tkirby.org",target="_blank") wallpaper.tkirby.org
               i.glyphicon.glyphicon-globe
             .desc Selected works of photography projects
       .row.section
@@ -117,7 +117,7 @@ html(lang="en")
             .contest NTU Public News Contest
             .award First Prize / Multimedia News Category
             .desc
-              a(href="http://0media.tw/yslin/") Historical Review of Taiwan Democracy Activity and Yi-hsiung Lin
+              a(href="http://0media.tw/yslin/",target="_blank") Historical Review of Taiwan Democracy Activity and Yi-hsiung Lin
               i.glyphicon.glyphicon-globe.no-print
           .item
             .date 2014
@@ -136,6 +136,6 @@ html(lang="en")
             .contest Yahoo Hack Day 2012
             .award Honorable Mention
             .desc
-              a(href="http://budget.g0v.tw") Open Budget - Open + Visualization of Taiwan Government Budget
+              a(href="http://budget.g0v.tw",target="_blank") Open Budget - Open + Visualization of Taiwan Government Budget
               i.glyphicon.glyphicon-globe.no-print
 
