--- a/index.jade
+++ b/index.jade
@@ -38,9 +38,16 @@ html(lang="en")
         .col-sm-8
           .item
             .date 2013 ~ now
-            .inst Foundi.info
+            .inst: a(href="http://foundi.info",target="_blank") Foundi.info
+            i.glyphicon.glyphicon-globe
             .title Co-founder
             .desc Busincess development, marketing, web frontend engineering
+          .item
+            .date 2015
+            .inst: a(href="http://dbootcamp.taipei",target="_blank") d|Bootcamp Taipei
+            i.glyphicon.glyphicon-globe
+            .title Co-organizer
+            .desc Data journalism workshop and crash courses for journalist and related industry
           .item
             .date 2014
             .inst Google Taiwan Digicamp
@@ -48,7 +55,8 @@ html(lang="en")
             .desc Consultant focused on web-baed technology and marketing campaign
           .item
             .date 2012 ~ now
-            .inst g0v.tw
+            .inst: a(href="http://g0v.tw",target="_blank") g0v.tw
+            i.glyphicon.glyphicon-globe
             .title Co-founder
             .desc Taiwan open government community. Contributor and missionary
           .item
