--- a/index.styl
+++ b/index.styl
@@ -41,16 +41,23 @@ html,body
 .item
   margin-bottom: 11px
 
-.inst, .title, .contest, .award
+.title, .contest, .award
   display: inline-block
   margin-right: 10px
 
 .title, .award
   font-style: italic
 
-.inst, .proj, .tech, .contest
+.proj, .tech, .contest
   font-weight: bold
   margin-right: 10px
+
+.inst
+  font-weight: bold
+  display: inline-block
+
+.title
+  margin-left: 10px
 
 .desc
   opacity: 0.9
