update for PCCU and foundi order

--- a/index.jade
+++ b/index.jade
@@ -21,23 +21,20 @@ html(lang="en")
       .email tkirby@gmail.com
       .phone +886-911015216 / 0911015216 (Taiwan)
       .summary
-        | Cofounder of foundi.info, g0v.tw and infographics.tw.
+        | Cofounder of  g0v.tw and infographics.tw, foundi.info.
         | Expert in web technology and data visualization.
-        | Invited lecturer of media and communication domains in universities including NTU, SHU, NCTU, NCCU, etc.
+        | Invited lecturer or consultant of media and communication domains in universities including NTU, SHU, NCTU, NCCU, PCCU, FJU, etc.
         | Also a professional photographer specialized in wedding and mountain photography.
       .row.section
-        .col-sm-3.table-head EDUCATION
+        .col-sm-3.table-head EXPERIENCE
         .col-sm-8
           .item
-            .date 1999 ~ 2005
-            .inst National Taiwan University
-            .dept Dept. of Computer Science and Information Engineering
-            .title Master Degree
-      .row.section
-        .col-sm-3.table-head WORK EXPERIENCE
-        .col-sm-8
+            .date 2015 ~ now
+            .inst infographics.tw
+            .title Founder
+            .desc Dedicated in promoting visualization technologies in Mandarin Community
           .item
-            .date 2013 ~ now
+            .date 2013 ~ 2015
             .inst Foundi.info
             .title Co-founder
             .desc Busincess development, marketing, web frontend engineering
@@ -56,18 +53,26 @@ html(lang="en")
             .inst Mediatek inc.
             .title Senior Software Engineer
             .desc Linux kernel, system automation / optimization and building system
+      .row.section
+        .col-sm-3.table-head EDUCATION
+        .col-sm-8
+          .item
+            .date 1999 ~ 2005
+            .inst National Taiwan University
+            .dept Dept. of Computer Science and Information Engineering
+            .title Master Degree
 
       .row.section
         .col-sm-3.table-head SKILL
         .col-sm-8
           .item
-            .date 1998 ~ now
-            .tech Web Related Technology
-            .desc HTML5, JavaScript, Node.js, Django
-          .item
             .date 2012 ~ now
             .tech Data Visualization
             .desc Data crawling and analysis, interactive visualization in D3.js
+          .item
+            .date 1998 ~ now
+            .tech Web Related Technology
+            .desc HTML5, JavaScript, Node.js, Django
           .item
             .date 2010 ~ 2013
             .tech Android Open Platform
@@ -91,18 +96,18 @@ html(lang="en")
               a(href="http://loading.io",target="_blank") loading.io
               i.glyphicon.glyphicon-globe
             .desc Web designer toolbox
-          .item.no-print
-            .date 2013 ~ now
-            .proj 
-              a(href="http://foundi.info",target="_blank") foundi.info
-              i.glyphicon.glyphicon-globe
-            .desc Real estate information platform
           .item
             .date 2013 ~ now
             .proj 
               a(href="http://zbryikt.github.io/visualize/",target="_blank") zbryikt.github.io/visualize/
               i.glyphicon.glyphicon-globe
             .desc Selected works of visualization projects
+          .item.no-print
+            .date 2013 ~ 2015
+            .proj 
+              a(href="http://foundi.info",target="_blank") foundi.info
+              i.glyphicon.glyphicon-globe
+            .desc Real estate information platform
           .item
             .date 2011 ~ now
             .proj 
