update Foundi to foundi

--- a/index.jade
+++ b/index.jade
@@ -35,7 +35,7 @@ html(lang="en")
             .desc Dedicated in promoting visualization technologies in Mandarin Community
           .item
             .date 2013 ~ 2015
-            .inst: a(href="http://foundi.info",target="_blank") Foundi.info
+            .inst: a(href="http://foundi.info",target="_blank") foundi.info
             i.glyphicon.glyphicon-globe
             .title Co-founder
             .desc Busincess development, marketing, web frontend engineering
