update er game info

--- a/index.jade
+++ b/index.jade
@@ -99,6 +99,12 @@ html(lang="en")
               i.glyphicon.glyphicon-globe
             .desc Data visualization resources in Mandarin community
           .item
+            .date 2015
+            .proj
+              a(href="http://0media.tw/p/ergame/",target="_blank") Life in Emergency Room
+              i.glyphicon.glyphicon-globe
+            .desc News Game about Issues of ER Violence and Abuse in Taiwan
+          .item
             .date 2014 ~ now
             .proj 
               a(href="http://loading.io",target="_blank") loading.io
