update hackshackers taipei. remove duplicate item

--- a/index.jade
+++ b/index.jade
@@ -29,8 +29,21 @@ html(lang="en")
         .col-sm-3.table-head EXPERIENCE
         .col-sm-8
           .item
+            .date 2016 ~ now
+            .inst: a(href="http://hackshackers.taipei",target="_blank") Hacks/Hackers Taipei
+            i.glyphicon.glyphicon-globe
+            .title Co-organizer
+            .desc Journalist x Developer Community for rebooting journalism. Official Taipei Chapter.
+          .item
+            .date 2016 ~ now
+            .inst: a(href="http://plotdb.com",target="_blank") plotdb.com
+            i.glyphicon.glyphicon-globe
+            .title Founder
+            .desc Online visualization service for everyone
+          .item
             .date 2015 ~ now
-            .inst infographics.tw
+            .inst: a(href="http://infographics.tw",target="_blank") infographics.tw
+            i.glyphicon.glyphicon-globe
             .title Founder
             .desc Dedicated in promoting visualization technologies in Mandarin Community
           .item
@@ -38,7 +51,7 @@ html(lang="en")
             .inst: a(href="http://foundi.info",target="_blank") foundi.info
             i.glyphicon.glyphicon-globe
             .title Co-founder
-            .desc Busincess development, marketing, web frontend engineering
+            .desc Information service for real estate industry.
           .item
             .date 2015
             .inst: a(href="http://dbootcamp.taipei",target="_blank") d|Bootcamp Taipei
@@ -92,7 +105,7 @@ html(lang="en")
       .row.section
         .col-sm-3.table-head PORTFOLIO
         .col-sm-8
-          .item.no-print
+          //-.item.no-print
             .date 2015 ~ now
             .proj 
               a(href="http://blog.infographics.tw",target="_blank") infographics.tw
