--- a/index.jade
+++ b/index.jade
@@ -145,6 +145,11 @@ html(lang="en")
         .col-sm-3.table-head AWARD
         .col-sm-8
           .item
+            .date 2016
+            .contest Excellent Journalism Award
+            .award Finalists
+            .desc "#[a(href="http://0media.tw/p/ergame/",target="_blank") Life in Emergency Room]", in "Feature Report" category
+          .item
             .date 2014
             .contest NTU Public News Contest
             .award First Prize / Multimedia News Category
