update cofound list

--- a/index.jade
+++ b/index.jade
@@ -21,7 +21,7 @@ html(lang="en")
       .email tkirby@gmail.com
       .phone +886-911015216 / 0911015216 (Taiwan)
       .summary
-        | Cofounder of  g0v.tw and infographics.tw, foundi.info.
+        | Cofounder of plotdb.com, g0v.tw and foundi.info.
         | Expert in web technology and data visualization.
         | Invited lecturer or consultant of media and communication domains in universities including NTU, SHU, NCTU, NCCU, PCCU, FJU, etc.
         | Also a professional photographer specialized in wedding and mountain photography.
