--- a/index.css
+++ b/index.css
@@ -128,6 +128,8 @@ a {
   #root {
     width: 95%;
     margin: 25px auto 5px;
+    font-size: 0.5em;
+    line-height: 0.9em;
   }
   .item {
     margin-bottom: 5px;
@@ -136,8 +138,8 @@ a {
     content: none !important;
   }
   .summary {
-    line-height: 15px;
-    margin-bottom: 15px;
+    line-height: 14px;
+    margin-bottom: 10px;
   }
   .section:before {
     padding-top: 10px;
