add fju and pts experience

--- a/index.jade
+++ b/index.jade
@@ -29,6 +29,25 @@ html(lang="en")
         .col-sm-3.table-head EXPERIENCE
         .col-sm-8
           .item
+            .date 2017 ~ now
+            .inst: a(href="https://jcs.tw",target="_blank") Fu Jen Catholic University
+            i.glyphicon.glyphicon-globe
+            .title
+              span Adjunct Instructor, in 
+              span.has-tips
+                | dept. of JCS
+                .hover-tip(style="width:300px") Dept. of Journalism and Communication Studies
+            .desc
+              | Focus on digital content design thinking. 
+              a(href="http://xinmeti.co/",target="_blank") http://xinmeti.co/
+              i.glyphicon.glyphicon-globe
+          .item
+            .date 2017 ~ now
+            .inst: a(href="https://www.pts.org.tw/",target="_blank") Public Television Service Foundation
+            i.glyphicon.glyphicon-globe
+            .title Advisory Committee Member
+            .desc New media advisory committee in Board of directors
+          .item
             .date 2016 ~ now
             .inst: a(href="http://hackshackers.taipei",target="_blank") Hacks/Hackers Taipei
             i.glyphicon.glyphicon-globe
@@ -46,6 +65,12 @@ html(lang="en")
             i.glyphicon.glyphicon-globe
             .title Founder
             .desc Dedicated in promoting visualization technologies in Mandarin Community
+          .item
+            .date 2014 ~ now
+            .inst: a(href="https://loading.io/",target="_blank") loading.io
+            i.glyphicon.glyphicon-globe
+            .title Founder
+            .desc Web service for loading icons and micro animation 
           .item
             .date 2013 ~ 2015
             .inst: a(href="http://foundi.info",target="_blank") foundi.info
@@ -117,12 +142,6 @@ html(lang="en")
               a(href="http://0media.tw/p/ergame/",target="_blank") Life in Emergency Room
               i.glyphicon.glyphicon-globe
             .desc News Game about Issues of ER Violence and Abuse in Taiwan
-          .item
-            .date 2014 ~ now
-            .proj 
-              a(href="http://loading.io",target="_blank") loading.io
-              i.glyphicon.glyphicon-globe
-            .desc Web designer toolbox
           .item
             .date 2013 ~ now
             .proj 
