--- a/index.css
+++ b/index.css
@@ -146,3 +146,67 @@ a {
     margin-top: 7px;
   }
 }
+.has-tips {
+  position: relative;
+  overflow: visible;
+}
+.has-tips .hover-tip {
+  display: block;
+  opacity: 0;
+  z-index: -1;
+  -ms-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  -webkit-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+.btn.has-tips:hover .hover-tip,
+.has-tips:hover .hover-tip,
+.has-tips.tip-on .hover-tip {
+  display: block;
+  opacity: 1;
+  z-index: 10;
+}
+.hover-tip {
+  background: #000;
+  border-radius: 3px;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  min-width: 100px;
+  color: #fff;
+  padding: 5px 10px;
+  text-align: center;
+  z-index: -1;
+  font-size: 13px;
+  top: auto;
+  bottom: 100%;
+  margin-bottom: 7px;
+}
+.hover-tip a {
+  color: #73baf7;
+}
+.hover-tip:before {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  margin-left: -7px;
+  background: #000;
+  display: block;
+  content: " ";
+  -ms-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.hover-tip:before {
+  top: auto;
+  bottom: -5px;
+}
