remove credential information

--- a/index.jade
+++ b/index.jade
@@ -18,8 +18,8 @@ html(lang="en")
   body
     #root
       .name Tai Hui Wu / 吳泰輝
-      .email tkirby@gmail.com
-      .phone +886-911015216 / 0911015216 (Taiwan)
+      //-.email .@.com
+      //-.phone +886-. / . (Taiwan)
       .summary
         | Cofounder of plotdb.com, g0v.tw and foundi.info.
         | Expert in web technology and data visualization.
